add module debit card, transaction
